Bug fixes, resizing for game jolt
Resized the game for game jolt player.
Player cannot go off screen, and target bounces properly now.
Various minor bug fixes

--- a/css/credits.css
+++ b/css/credits.css
@@ -3,7 +3,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: "Anton";
-	font-size: 2em;
+	font-size: 1.7em;
 	color: white;
 }
 
@@ -19,11 +19,6 @@ body {
 	text-align: center;
 	font-size: 3em;
 }
-#title-container {
-	text-align: center;
-	font-size: 3em;
-}
-
 
 #container-wrapper {
 	text-align: center;
@@ -93,17 +88,12 @@ li {
 }
 button {
 	font-family: "Anton";
-	font-size: 2em;
+	font-size: 1.2em;
 	display: block;
-	width: 60%;
-	margin: 25px auto;
+	width: 40%;
+	margin: 50px auto;
 }
 
 #button-container {
 	text-align: center;
-}
-
-/* RUSH JOBBB */
-h1 {
-	margin-top: -25px;
 }
