--- a/css/instructions.css
+++ b/css/instructions.css
@@ -3,7 +3,7 @@ body {
 	padding: 0;
 	margin: 0;
 	font-family: "Anton";
-	font-size: 2em;
+	font-size: 1.7em;
 	color: white;
 }
 
@@ -15,15 +15,9 @@ body {
 }
 
 /* Title */
-#title-container {
+h1 {
 	text-align: center;
-	font-size: 3em;
 }
-#title-container {
-	text-align: center;
-	font-size: 3em;
-}
-
 
 #container-wrapper {
 	text-align: center;
@@ -92,9 +86,9 @@ li {
 }
 button {
 	font-family: "Anton";
-	font-size: 2em;
+	font-size: 1.2em;
 	display: block;
-	width: 60%;
+	width: 40%;
 	margin: 25px auto;
 }
 
