--- a/css/menu.css
+++ b/css/menu.css
@@ -17,11 +17,10 @@ body {
 	text-align: center;
 	font-size: 3em;
 }
-#title-container {
-	text-align: center;
-	font-size: 3em;
+#title-container img {
+	height: 400px;
+	width: auto;
 }
-
 
 #container-wrapper {
 	text-align: center;
@@ -37,7 +36,7 @@ td {
 	font-size: 2em;
 }
 img {
-	height: 50%;
+	height: 40%;
 	width: auto;
 }
 /* Navigation */
@@ -86,6 +85,6 @@ button {
 	font-family: "Anton";
 	font-size: 2em;
 	display: block;
-	width: 60%;
+	width: 50%;
 	margin: 10px auto;
 }
